# pgns-agent-crewai

./: README.md  pyproject.toml
pgns_agent_crewai/: __init__.py  _adapter.py  _version.py
tests/: test_adapter.py
