[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgns-agent-crewai"
dynamic = ["version"]
description = "CrewAI adapter for pgns-agent"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "pgns" }]
keywords = ["agents", "a2a", "pgns", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pgns-agent>=0.1",
    "crewai>=0.108,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://pgns.io"
Documentation = "https://docs.pgns.io/libraries/pgns-agent-crewai"
Repository = "https://github.com/pgns-io/pgns-agent-crewai"

[tool.hatch.version]
path = "pgns_agent_crewai/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["pgns_agent_crewai"]
